Fix landscape mode on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0px;
   padding: 0px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 nav {
@@ -45,9 +50,20 @@ h1 {
   width: 195x;
 }
 
+@media (max-width: 840px) and (orientation: landscape) {
+  body {
+    height: 100%;
+  }
+
+  .container {
+    margin: 10px 0;
+  }
+}
+
 @media screen and (max-width: 420px) {
   body {
     background-color: #FFF;
+    height: 100vh;
   }
 
   .container {
@@ -64,15 +80,16 @@ h1 {
   }
 }
 
+
 .container {
   background-color: #fff;
   border-radius: 8px;
   width: 400px;
   height: 500px;
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%); */
 }
 
 
